<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:clickable="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="10dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_device_address"
                          android:textColor="@color/colorBlueDark"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/device_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlueDark"
                        android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_name"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                    android:layout_height="wrap_content"/>
                <TextView android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="10dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_state"
                          android:textColor="@color/colorBlueDark"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/connection_state"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/disconnected"
                          android:textColor="@color/colorBlueDark"
                          android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="10dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_read_data"
                          android:textColor="@color/colorBlueDark"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/data_value"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textMultiLine"
                          android:text="@string/no_data"
                          android:textColor="@color/colorBlueDark"
                          android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:weightSum="1">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_write_data"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="18sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/write_data_edit_text"
                    android:layout_gravity="center_horizontal"
                    android:text="Type sth...."
                    android:layout_weight="1.95" />

                <Space android:layout_width="5dp"
                    android:layout_height="wrap_content"/>
                <TextView android:id="@+id/write_data_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="18sp"/>

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:weightSum="1">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="64dp"
                        android:text="Send"
                        android:id="@+id/write_data_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.55" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/read_data_check_box"
                        android:checked="true"
                        android:text="ReadOn"
                        android:layout_weight="0.40"
                        android:width="10dp" />
                </LinearLayout>
            </LinearLayout>
            <android.inputmethodservice.KeyboardView
                android:id="@+id/keyboardview"
                android:layout_width="fill_parent"
                android:layout_height="209dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="visible" />
            <Space android:layout_width="fill_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>

